leadershipstyles.css
@font-face {
    font-family: "BabaPro";
    src: url("/fonts/BabaPro (2020_09_14 16_25_34 UTC).ttf") format("truetype");
  }
  
  @font-face {
      font-family: "Roboto";
      src: url("fonts/Roboto-Regular.ttf") format("truetype");
  }
  
  *,
  *:before,
  *:after {
    box-sizing: border-box;
  }
  
  body {
      background-color: black;
      color: white;
      margin: 0;
  }
  
  button {
      font-family: "Roboto";
      max-height: 3rem;
      max-width: 10rem;
      white-space: nowrap;
      color: white;
      background-color: #124bce82;
      border: solid 1px #124bce82;
      border-radius: 40px;
      font-size: 1.2rem;
      text-transform: uppercase;
      padding: 10px 15px;
      cursor: pointer;
      transition: all .2s ease-in-out;
  }
  
  button:hover {
      transform: scale(1.1);
      background-color: #124bce;
      border: solid 1px #124bce;
  }
  
  a {
      text-decoration: none;
      color: white;
  }
  
  h1 {
      font-family: "BabaPro";
      font-weight: lighter;
      text-align: center;
      font-size: 2rem;
      border-bottom: solid white 3px;
      padding: 1rem 0;
      margin: 0 auto 1rem auto;
      line-height: 2rem;
      max-width: 15rem;
  }
  
  section {
      font-family: "Roboto";
      text-align: center;
      margin: 4rem 0;
      line-height: 1.3rem;
      font-size: 1rem;
  }
  
  p {
      margin: 3rem;
  }
  
  ul {
      margin: 0;
  }
  
  .overlay {
      background-image: url(images/DHFA-logo-overlay.png);
      background-size: cover;
      opacity: 0.75;
      z-index: -1;
      position: fixed;
      left: 0;
      right: 0;
      width: 100vw;
      height: 100%;
      mix-blend-mode: screen;
      pointer-events: none;
    }

    /* HEADER SECTION---------------------------- */
.header-top {
    z-index: -1;
    position: absolute;
    background-color: white;
    overflow: auto;
    color: black;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    max-height: 6rem;
}

.logo {
    position: absolute;
    display: flex;
    width: 5.75rem;
    top: .75rem;;
    bottom: 0;
    left: 4.5rem;
}

.members-tag {
    position: absolute;
    color: black;
    font-family: "BabaPro";
    display: inline-flex;
    top: 1rem;
    right: .7rem;
    font-size: 1rem;
}

.head-img {
    margin-top: 2rem;
    position: relative;
    width: 100%;
    overflow: hidden;
    filter: grayscale(100%);
}

.shield {
    position: absolute;
    top: 3.5rem;
    bottom: 0;
    right: .5rem;
    max-width: 30%;
}


/* NAVIGATION SECTION------------------------ */
.menuToggle {
    max-width: 5rem;
  display: block;
  position: relative;
  top: 1em;
  left: .75rem;
  z-index: 2;
  -webkit-user-select: none;
  user-select: none;
}

.menuToggle a {
  font-family: "BabaPro";
  text-decoration: none;
  color: white;
  transition: 0.4s ease-in-out;
}

.menuToggle a:hover {
    transition: 0.4s ease-in-out;
  color: #32ebef;
  text-decoration: underline;
}

.menuToggle input {
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  cursor: pointer;
  opacity: 0; 
  z-index: 2; 
  -webkit-touch-callout: none;
}

.menuToggle span {
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  background: black;
  z-index: 1;
  transform-origin: 4px 0px;
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.55s ease;
}

.menuToggle span:first-child {
  transform-origin: 0% 0%;
}

.menuToggle span:nth-last-child(2) {
  transform-origin: 0% 100%;
}

.menuToggle input:checked ~ span {
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: white;
}

.menuToggle input:checked ~ span:nth-last-child(3) {
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

.menuToggle input:checked ~ span:nth-last-child(2) {
  transform: rotate(-45deg) translate(0, -1px);
}

.menu {
  position: absolute;
  width: 300px;
  margin: -100px 0 0 -50px;
  padding: 50px;
  padding-top: 125px;
  border: solid 3px #32ebef;
  border-radius: 40px;
  background-color: rgba(0, 0, 0, 0.7);
  background-image: url(images/Hilts-1.png);
  background-repeat: no-repeat;
  background-position: right;
  background-size: 50rem;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  transform-origin: 0% 0%;
  transform: translate(-100%, 0);
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
}

.menu li {
  padding: 2rem;
  font-size: 1.4rem;
}

.menuToggle input:checked ~ ul {
  transform: none;
}

/* OPENING TAG SECTION------------------------ */
.opening-tag{
    text-align: center;
}
/* INSTRUCTOR LIST SECTION-------------------- */
.instructor-list {
    background-color: rgba(0, 0, 0, 0.7);;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-gap: 1rem;
}

.instructor-list li {
    display: grid;
    grid-template-columns: 1;
    grid-template-rows: 1;
    list-style-type: none;
    width: 10rem;
    height: 10rem;
}

.instructor-list:nth-of-type(1n){
    padding-top: 1rem;
}

.instructor-list:last-child{
    padding-bottom: 1rem;
}

.instructor-list li img {
    grid-column: 1 / -1;
    grid-row: 1 / -1;
    max-width: 100%;
    max-height: 100%;
    object-fit: cover;
}

.img-overlay{
    z-index: -1;
    background:linear-gradient(45deg, #32ebef32, #814AF032);
    grid-column: 1 / -1;
    grid-row: 1 / -1;
    position: relative;
    transform: translateZ(1);
    transition: 0.1s ease-in-out;
}

.instructor-list li:hover .img-overlay {
    z-index: 1;
    transform: none;
}

.book-button {
    z-index: 2;
    display: grid;
    grid-column: 1 / -1;
    grid-row: 1 / -1;
    max-width: 75%;
    max-height: 60%;
    font-size: .9rem;
    justify-self: center;
    align-self: end;
    justify-content: center;
    margin-bottom: .5rem;
}

/* SOCIAL MEDIA SECTION-------------------------- */

.social-media {
    margin-bottom: 0;
}

.social-list {
    font-family: "BabaPro";
    position: relative;
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: auto;
    grid-gap: 1fr;
    grid-auto-flow: column;
    text-decoration: none;
    list-style-type: none;
    text-align: center;
    background-color: rgba(0, 0, 0, 0.6);
    max-width: 100vw;
    max-height: 3.5rem;
    padding: 0;
}

.social-list li {
    padding: .5rem;
}

.social-list span {
    display: none;
}

.bottom-div {
    display: flex;
    flex: 1;
    background-color: black;
    min-height: 3rem;
    bottom: 0;
}

svg {
    max-height: 2.5rem;
    max-width: 2.5rem;
    fill: white;
}


.social-list a:hover,
svg:hover {
    transition: 0.4s ease-in-out;
    fill: #32ebef;
    color: #32ebef;
    text-decoration: underline;
}

